# wasmedge-rust-sdk

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: bindings-rust.yml  ci-build-release-lib.yml  ci-build.yml  integration-test.yml  publish-async-api-docs.yml  release-async-api-docs.yml  release-async-wasi.yml  release-wasmedge-macro.yml  release-wasmedge-sdk.yml  release-wasmedge-sys.yml  release-wasmedge-types.yml  rust-static-lib.yml  standalone.yml  test.yml
async_wasi/: all.html  index.html  sidebar-items.js
async_wasi/object_pool/: index.html  sidebar-items.js  struct.ObjectNode.html  struct.ObjectPool.html  struct.SerialObjectPool.html
async_wasi/snapshots/: index.html  sidebar-items.js  struct.WasiCtx.html
crates/async-wasi/: Cargo.toml  README.md
crates/async-wasi/src/: lib.rs  object_pool.rs
crates/async-wasi/src/snapshots/: env.rs  mod.rs
crates/async-wasi/src/snapshots/common/: clock.rs  error.rs  memory.rs  mod.rs  types.rs
crates/async-wasi/src/snapshots/common/net/: async_tokio.rs  mod.rs
crates/async-wasi/src/snapshots/common/vfs/: impls.rs  mod.rs  sync.rs  virtual_sys.rs
crates/async-wasi/src/snapshots/preview_1/: async_poll.rs  async_socket.rs  mod.rs
crates/wasmedge-macro/: Cargo.toml
crates/wasmedge-macro/src/: lib.rs
crates/wasmedge-sys/: Cargo.toml  README.md  build.rs  build_paths.rs  build_standalone.rs
crates/wasmedge-sys/examples/: async_host_func.rs  async_run_func.rs  async_run_registered_func.rs  context_data_to_host_func.rs  func_call_across_different_modes.rs  hostfunc.rs  hostfunc2.rs  table_and_funcref.rs
crates/wasmedge-sys/src/: ast_module.rs  async_wasi.rs  compiler.rs  config.rs  executor.rs  frame.rs  lib.rs  loader.rs  plugin.rs  statistics.rs  store.rs  types.rs  utils.rs  validator.rs
crates/wasmedge-sys/src/async/: fiber.rs  function.rs  mod.rs  module.rs
crates/wasmedge-sys/src/instance/: function.rs  global.rs  memory.rs  mod.rs  module.rs  table.rs
crates/wasmedge-sys/tests/: common.rs  executor_with_statistics.rs  test_aot.rs
crates/wasmedge-types/: Cargo.toml
crates/wasmedge-types/src/: error.rs  lib.rs
docs/: Upgrade_to_0.14.0.md
examples/: README.md  async_hello_world.rs  async_run_func.rs  create_host_func_in_host_func.rs  hello_world.rs  host_func_with_custom_error.rs  hostfunc_call_chain.rs  run_func_in_aot_mode.rs  run_wasm.rs  vm.rs  wasi_print_env.rs
examples/wasmedge-sys/: async_hello.rs  async_hello.wasm  async_host_func.rs  async_run_func.rs  async_run_registered_func.rs  executor_register_active_module.rs  executor_register_named_module.rs  fibonacci.rs  hello.rs  hostfunc.rs  hostfunc2.rs  mdbook_example_module_instance.rs  store_get_named_module.rs  table_and_funcref.rs  threads.rs
scripts/: test-integration.sh
search.desc/async_wasi/: async_wasi-desc-0-.js
search.desc/wasmedge_macro/: wasmedge_macro-desc-0-.js
search.desc/wasmedge_sdk/: wasmedge_sdk-desc-0-.js
search.desc/wasmedge_sys/: wasmedge_sys-desc-0-.js
search.desc/wasmedge_types/: wasmedge_types-desc-0-.js
src/: async.rs  compiler.rs  config.rs  dock.rs  executor.rs  import.rs  instance.rs  io.rs  lib.rs  module.rs  plugin.rs  store.rs  types.rs  utils.rs  vm.rs  wasi.rs
src/async/: import.rs  mod.rs  vm.rs
src/async_wasi/: lib.rs.html  object_pool.rs.html
src/wasmedge_macro/: lib.rs.html
src/wasmedge_sdk/: caller.rs.html  compiler.rs.html  config.rs.html  dock.rs.html  executor.rs.html  import.rs.html  instance.rs.html  io.rs.html  lib.rs.html  log.rs.html  module.rs.html  plugin.rs.html  statistics.rs.html  store.rs.html  (+4 more)
test-wasm/: Cargo.toml
tests/: integration_test.rs
wasmedge_macro/: all.html  attr.async_host_function.html  attr.host_function.html  index.html  sidebar-items.js
wasmedge_sdk/: all.html  attr.async_host_function.html  attr.host_function.html  enum.CompilerOptimizationLevel.html  enum.CompilerOutputFormat.html  enum.ExternalInstanceType.html  enum.HostRegistration.html  enum.Mutability.html  enum.RefType.html  enum.ValType.html  fn.wat2wasm.html  index.html  macro.params.html  sidebar-items.js  struct.Caller.html  struct.Compiler.html  struct.CoreVersion.html  struct.Driver.html  struct.Executor.html  struct.ExportType.html  struct.Func.html  struct.FuncRef.html  struct.FuncType.html  struct.FuncTypeBuilder.html  struct.Global.html  struct.GlobalType.html  struct.ImportObject.html  struct.ImportObjectBuilder.html  struct.ImportType.html  struct.Instance.html  struct.LogManager.html  struct.Memory.html  struct.MemoryType.html  struct.Module.html  struct.Statistics.html  struct.Store.html  struct.Table.html  struct.TableType.html  struct.Vm.html  struct.VmBuilder.html  (+12 more)
wasmedge_sys/: all.html  enum.ImportObject.html  enum.WasiInstance.html  index.html  sidebar-items.js  struct.AsyncWasiModule.html  struct.CallingFrame.html  struct.Compiler.html  struct.Config.html  struct.Executor.html  struct.ExportType.html  struct.FuncRef.html  struct.FuncType.html  struct.Function.html  struct.Global.html  struct.GlobalType.html  struct.ImportModule.html  struct.ImportType.html  struct.Instance.html  struct.Loader.html  struct.MemType.html  struct.Memory.html  struct.MemoryType.html  struct.Module.html  struct.Statistics.html  struct.Store.html  struct.Table.html  struct.TableType.html  struct.Validator.html  struct.WasiModule.html  struct.WasmValue.html  trait.AsImport.html  trait.AsInstance.html  trait.Engine.html  type.AsyncHostFn.html  type.FuncRef.html  type.HostFn.html  type.SyncFn.html  type.WasiCtx.html
wasmedge_types/: all.html  enum.CompilerOptimizationLevel.html  enum.CompilerOutputFormat.html  enum.ExternalInstanceType.html  enum.HostRegistration.html  enum.Mutability.html  enum.NeverType.html  enum.RefType.html  enum.ValType.html  fn.wat2wasm.html  index.html  sidebar-items.js  struct.FuncType.html  struct.GlobalType.html  struct.MemoryType.html  struct.TableType.html  type.WasmEdgeResult.html
(+1608 files in other folders)
