[package]
categories = ["api-bindings", "wasm"]
description = "WasmEdge Runtime is a high-performance, extensible, and hardware optimized WebAssembly Virtual Machine for automotive, cloud, AI, and blockchain applications."
documentation = "https://wasmedge.github.io/wasmedge-rust-sdk/wasmedge_sdk/"
edition = "2021"
exclude = ["examples/"]
license = "Apache-2.0"
name = "wasmedge-sdk"
readme = "README.md"
repository = "https://github.com/WasmEdge/WasmEdge/blob/master/bindings/rust/wasmedge-sdk"
version = "0.10.0-dev"

[dependencies]
anyhow = "1.0"
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1.0.30"
wasmedge-macro = {path = "crates/wasmedge-macro", version = "0.5"}
wasmedge-sys = {path = "crates/wasmedge-sys", version = "0.15", default-features = false}
wasmedge-types = {path = "crates/wasmedge-types", version = "0.4"}
wat = "1.0"

[features]
aot = ["wasmedge-sys/aot"]
async = ["wasmedge-sys/async"]
default = []
ffi = ["wasmedge-sys/ffi"]
standalone = ["wasmedge-sys/standalone"]
static = ["wasmedge-sys/static"]
wasi_crypto = ["wasmedge-sys/wasi_crypto"]
wasi_nn = ["wasmedge-sys/wasi_nn"]
wasmedge_process = ["wasmedge-sys/wasmedge_process"]

[dev-dependencies]
tokio = {version = "1", features = ["full"]}

[workspace]
