[package]
categories = ["api-bindings", "wasm"]
description = "WasmEdge Runtime is a high-performance, extensible, and hardware optimized WebAssembly Virtual Machine for automotive, cloud, AI, and blockchain applications."
documentation = "https://wasmedge.github.io/wasmedge-rust-sdk/wasmedge_sdk/"
edition = "2021"
exclude = ["examples/"]
license = "Apache-2.0"
name = "wasmedge-sdk"
readme = "README.md"
repository = "https://github.com/WasmEdge/WasmEdge/blob/master/bindings/rust/wasmedge-sdk"
version = "0.11.0-dev"

[dependencies]
anyhow = "1.0"
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1.0.30"
wasmedge-macro.workspace = true
wasmedge-sys = {path = "crates/wasmedge-sys", version = "0.16", default-features = false}
wasmedge-types.workspace = true
cfg-if.workspace = true

[workspace.dependencies]
cfg-if = "1.0.0"
wat = "=1.0.67"
async-wasi = {path = "crates/async-wasi", version = "=0.0.3"}
wasmedge-macro = {path = "crates/wasmedge-macro", version = "0.5"}
wasmedge-types = {path = "crates/wasmedge-types", version = "0.4"}

[target.'cfg(target_os = "linux")'.dependencies]
async-wasi = {workspace = true, optional = true}

[features]
aot = ["wasmedge-sys/aot"]
async = ["wasmedge-sys/async", "dep:async-wasi"]
default = []
ffi = ["wasmedge-sys/ffi"]
standalone = ["wasmedge-sys/standalone"]
static = ["wasmedge-sys/static"]
wasi_crypto = ["wasmedge-sys/wasi_crypto"]
wasi_nn = ["wasmedge-sys/wasi_nn"]
wasmedge_process = ["wasmedge-sys/wasmedge_process"]

[dev-dependencies]
tokio = {version = "1", features = ["full"]}

[workspace]
members = ["crates/wasmedge-sys", "crates/wasmedge-types", "crates/wasmedge-macro", "crates/async-wasi"]