[package]
categories = ["api-bindings", "wasm"]
description = "WasmEdge Runtime is a high-performance, extensible, and hardware optimized WebAssembly Virtual Machine for automotive, cloud, AI, and blockchain applications."
documentation = "https://wasmedge.github.io/wasmedge-rust-sdk/wasmedge_sdk/"
edition = "2021"
exclude = ["examples/"]
license = "Apache-2.0"
name = "wasmedge-sdk"
readme = "README.md"
repository = "https://github.com/WasmEdge/wasmedge-rust-sdk"
version = "0.12.0-dev"

[dependencies]
anyhow = "1.0"
cfg-if.workspace = true
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1.0.30"
wasmedge-macro.workspace = true
wasmedge-sys = { path = "crates/wasmedge-sys", version = "0.17", default-features = false }
wasmedge-types.workspace = true

[workspace.dependencies]
async-wasi = { path = "crates/async-wasi", version = "0.1" }
cfg-if = "1.0.0"
parking_lot = "0.12.1"
wasmedge-macro = { path = "crates/wasmedge-macro", version = "0.6" }
wasmedge-types = { path = "crates/wasmedge-types", version = "0.4" }
wat = "=1.0.67"

[target.'cfg(target_os = "linux")'.dependencies]
async-wasi = { workspace = true, optional = true }

[features]
aot = ["wasmedge-sys/aot"]
async = ["wasmedge-sys/async", "dep:async-wasi"]
default = []
ffi = ["wasmedge-sys/ffi"]
standalone = ["wasmedge-sys/standalone"]
static = ["wasmedge-sys/static"]
wasi_crypto = ["wasmedge-sys/wasi_crypto"]
wasi_nn = ["wasmedge-sys/wasi_nn"]
wasmedge_process = ["wasmedge-sys/wasmedge_process"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[workspace]
members = [
    "crates/wasmedge-sys",
    "crates/wasmedge-types",
    "crates/wasmedge-macro",
    "crates/async-wasi",
]
