[package]
categories = ["WebAssembly"]
description = "Async WASI for WasmEdge"
documentation = "https://docs.rs/async-wasi/"
edition = "2021"
license = "Apache-2.0"
name = "async-wasi"
readme = "README.md"
repository = "https://github.com/WasmEdge/wasmedge-rust-sdk"
version = "0.0.1"

[dependencies]
bitflags = "2.0.2"
cfg-if = "1.0.0"
futures = {version = "0.3"}
getrandom = "0.2"
libc = "0.2"
path-absolutize = "3.0.13"
serde = {version = "1", features = ["derive"], optional = true}
socket2 = {version = "^0.4.9", features = ["all"]}
tokio = {version = "1", features = ["full"], optional = true}

[dev-dependencies]
serde_json = {version = "1"}

[features]
async_tokio = ["tokio"]
default = ["async_tokio", "serialize"]
serialize = ["serde"]
