[package]
build = "build.rs"
categories = ["api-bindings", "wasm"]
description = "WasmEdge Runtime is a high-performance, extensible, and hardware optimized WebAssembly Virtual Machine for automotive, cloud, AI, and blockchain applications."
documentation = "https://wasmedge.github.io/WasmEdge/wasmedge_sys/"
edition = "2021"
exclude = ["tests/", "examples/"]
license = "Apache-2.0"
links = "wasmedge"
name = "wasmedge-sys"
readme = "README.md"
repository = "https://github.com/WasmEdge/WasmEdge/blob/master/bindings/rust/wasmedge-sys"
version = "0.14.0"

[dependencies]
fiber-for-wasmedge = {version = "8.0.1", optional = true}
libc = "0.2.94"
paste = "1.0.5"
scoped-tls = "1"
thiserror = "1.0.30"
wasmedge-macro = {path = "../wasmedge-macro", version = "0.4"}
wasmedge-types = {path = "../wasmedge-types", version = "0.4"}
wat = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
async-wasi = {path = "../async-wasi", optional = true}

[build-dependencies]
bindgen = {version = "0.65", default-features = false, features = ["runtime"]}
cmake = "0.1"

[dev-dependencies]
anyhow = "1"
tokio = {version = "1", features = ["full"]}

[features]
aot = []
async = ["dep:fiber-for-wasmedge", "dep:async-wasi"]
default = []
ffi = []
standalone = []
static = []
wasi_crypto = []
wasi_nn = []
wasmedge_process = []
