[package]
build = "build.rs"
categories = ["api-bindings", "wasm"]
description = "WasmEdge Runtime is a high-performance, extensible, and hardware optimized WebAssembly Virtual Machine for automotive, cloud, AI, and blockchain applications."
documentation = "https://wasmedge.github.io/wasmedge-rust-sdk/wasmedge_sys/"
edition = "2021"
exclude = ["tests/", "examples/"]
license = "Apache-2.0"
links = "wasmedge"
name = "wasmedge-sys"
readme = "README.md"
repository = "https://github.com/WasmEdge/wasmedge-rust-sdk"
version = "0.17.0"

[dependencies]
fiber-for-wasmedge = { version = "8.0.1", optional = true }
libc = "0.2.94"
paste = "1.0.5"
scoped-tls = "1"
thiserror = "1.0.30"
wasmedge-macro.workspace = true
wasmedge-types.workspace = true
wat.workspace = true
lazy_static = "1.4.0"
parking_lot.workspace = true
rand = "0.8.4"
cfg-if.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
async-wasi = { workspace = true, optional = true }

[build-dependencies]
bindgen = { version = "0.65", default-features = false, features = ["runtime"] }
cmake = "0.1"
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
flate2 = "1"
tar = "0.4"
sha256 = "1"
lazy_static = "1.4.0"
phf = { version = "0.11", features = ["macros"] }

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }

[package.metadata.docs.rs]
features = ["aot", "wasi_crypto", "wasi_nn", "wasmedge_process", "ffi"]

[features]
aot = []
async = ["dep:fiber-for-wasmedge", "dep:async-wasi"]
default = []
ffi = []
standalone = []
static = []
wasi_crypto = []
wasi_nn = []
wasmedge_process = []
