[package]
categories = ["data-structures"]
description = "The common data structures for WasmEdge Rust bindings."
documentation = "https://docs.rs/wasmedge-types/"
edition = "2021"
license = "Apache-2.0"
name = "wasmedge-types"
readme = "README.md"
repository = "https://github.com/WasmEdge/wasmedge-rust-sdk"
version = "0.6.0"

[dependencies]
thiserror = "1.0.30"
wat = "1.0"
